Adding general template

--- a/000_templates/001_get_started.html
+++ b/000_templates/001_get_started.html
@@ -3253,7 +3253,7 @@ window.Quarto = {
 <p>In particular the video <strong>Get started with Quarto | Mine Çetinkaya-Rundel</strong></p>
 <section id="this-is-a-title-subheader" class="level2">
 <h2 class="anchored" data-anchor-id="this-is-a-title-subheader">This is a title subheader</h2>
-<p>Quarto uses <strong>markdown</strong> so it is important to familiarize with the basics of this tool. Please check out: <a href="https://quarto.org/">Quarto</a> &gt; Guide &gt; Authoring &gt; Markdown Basics</p>
+<p>Quarto uses <strong>markdown</strong> so it is important to familiarize with the basics of this tool. Please check out: <a href="https://quarto.org/">Quarto</a> &gt; Guide &gt; Authoring &gt; Markdown Basics &gt; Sign Up</p>
 </section>
 </section>
 <section id="quarto-html-basics" class="level1">
