Adding template and specific instructions marketing report 3

--- a/000_specific_instructions/003_specific_instructions_marketing_report_part_3.html
+++ b/000_specific_instructions/003_specific_instructions_marketing_report_part_3.html
@@ -3227,9 +3227,9 @@ text-justify: auto;
 <p>In this third report you are going to use data from <code>bike_sales</code> as a third step to complete the 2 tasks by:</p>
 <ul>
 <li><p>Estimating an statistical linear model to determine the price of a new product not offer by the company with information of the products the corporation already offer to support the Research and Development (R &amp; D) division</p></li>
-<li><p>Build a customer segmentation model by grouping the bike shops into clusters to suppor the marketing team</p></li>
+<li><p>Build a customer segmentation model by grouping the bike shops into clusters to support the marketing team</p></li>
 </ul>
-<p>Use the template <code>002_marketing_report_part-3.qmd</code> to build the marketing report. You can find the template to use in 2 locations. Choose the option of your preference:</p>
+<p>Use the template <code>003_marketing_report_part-3.qmd</code> to build the marketing report. You can find the template to use in 2 locations. Choose the option of your preference:</p>
 <ul>
 <li><p><a href="https://github.com/luifrancgom/marketing_research_and_analytics/" class="uri">https://github.com/luifrancgom/marketing_research_and_analytics/</a> &gt; 000_templates &gt; 003_marketing_report_part-3.qmd</p></li>
 <li><p>Tercer Corte 40% &gt; Learning Resources &gt; Support material &gt; Templates &gt; 003_marketing_report_part-3.qmd</p></li>
