adding diagrams and fixing correct name of the moodle forum

--- a/000_syllabus/000_syllabus_marketing_research_and_analytics_2025_2.html
+++ b/000_syllabus/000_syllabus_marketing_research_and_analytics_2025_2.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Luis Francisco Gómez López">
-<meta name="dcterms.date" content="2025-02-20">
+<meta name="dcterms.date" content="2025-06-24">
 
 <title>Syllabus Marketing Research and Analytics Module A AE</title>
 <style>
@@ -2233,7 +2233,7 @@ vertical-align: -.125em;
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">February 20, 2025</p>
+      <p class="date">June 24, 2025</p>
     </div>
   </div>
   
@@ -2285,7 +2285,7 @@ p { text-align: justify;
 <li>Type: Theoretical-Practice</li>
 <li>Area of Knowledge: Professional</li>
 <li>Semester: 9</li>
-<li>Block: 2 (March 24 - May 31, 2025)</li>
+<li>Block: 2 (September 22 - November 29, 2025)</li>
 </ul>
 </section>
 <section id="justification" class="level2" data-number="2.2">
@@ -2423,7 +2423,7 @@ Table 1: Reading schedule
 <section id="primer-corte-30" class="level3" data-number="3.2.1">
 <h3 data-number="3.2.1" class="anchored" data-anchor-id="primer-corte-30"><span class="header-section-number">3.2.1</span> Primer corte 30%</h3>
 <ul>
-<li><p>March 24</p>
+<li><p>September 22</p>
 <ul>
 <li><strong>Virtual meeting Presentation Syllabus</strong>
 <ul>
@@ -2435,7 +2435,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>March 26</p>
+<li><p>September 24</p>
 <ul>
 <li><strong>Welcome to R</strong>
 <ul>
@@ -2447,7 +2447,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>March 28</p>
+<li><p>September 26</p>
 <ul>
 <li><strong>Business Case</strong>
 <ul>
@@ -2458,7 +2458,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>March 29</p>
+<li><p>September 27</p>
 <ul>
 <li><strong>Progress marketing report 1</strong>
 <ul>
@@ -2474,7 +2474,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>April 2</p>
+<li><p>October 1</p>
 <ul>
 <li><strong>An overview of the R language</strong>
 <ul>
@@ -2486,7 +2486,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>April 4</p>
+<li><p>October 3</p>
 <ul>
 <li><strong>An overview of the R language</strong>
 <ul>
@@ -2498,7 +2498,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>April 5</p>
+<li><p>October 4</p>
 <ul>
 <li><strong>Progress marketing report 1</strong>
 <ul>
@@ -2514,7 +2514,15 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>April 9</p>
+<li><p>October 6</p>
+<ul>
+<li><strong>Begin Mid-semester break</strong></li>
+</ul></li>
+<li><p>October 12</p>
+<ul>
+<li><strong>End Mid-semester break</strong></li>
+</ul></li>
+<li><p>October 15</p>
 <ul>
 <li><strong>Describing data</strong>
 <ul>
@@ -2526,7 +2534,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>April 11</p>
+<li><p>October 17</p>
 <ul>
 <li><strong>Describing data</strong>
 <ul>
@@ -2538,7 +2546,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>April 12</p>
+<li><p>October 18</p>
 <ul>
 <li><strong>Progress marketing report 1</strong>
 <ul>
@@ -2554,7 +2562,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>April 12</p>
+<li><p>October 18</p>
 <ul>
 <li><strong>Oral presentation marketing report part 1</strong>
 <ul>
@@ -2571,15 +2579,7 @@ Table 1: Reading schedule
 <section id="segundo-corte-30" class="level3" data-number="3.2.2">
 <h3 data-number="3.2.2" class="anchored" data-anchor-id="segundo-corte-30"><span class="header-section-number">3.2.2</span> Segundo corte 30%</h3>
 <ul>
-<li><p>April 14</p>
-<ul>
-<li><strong>Begin Holy Week</strong></li>
-</ul></li>
-<li><p>April 20</p>
-<ul>
-<li><strong>End Holy Week</strong></li>
-</ul></li>
-<li><p>April 23</p>
+<li><p>October 22</p>
 <ul>
 <li><strong>Relationship between continuous variables</strong>
 <ul>
@@ -2591,7 +2591,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>April 25</p>
+<li><p>October 24</p>
 <ul>
 <li><strong>Relationship between continuous variables</strong>
 <ul>
@@ -2603,7 +2603,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>April 26</p>
+<li><p>October 25</p>
 <ul>
 <li><strong>Progress marketing report 2</strong>
 <ul>
@@ -2619,7 +2619,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>April 30</p>
+<li><p>October 29</p>
 <ul>
 <li><strong>Comparing groups: tables and visualizations</strong>
 <ul>
@@ -2631,7 +2631,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>May 2</p>
+<li><p>October 31</p>
 <ul>
 <li><strong>Comparing groups: tables and visualizations</strong>
 <ul>
@@ -2643,7 +2643,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>May 3</p>
+<li><p>November 1</p>
 <ul>
 <li><strong>Progress marketing report 2</strong>
 <ul>
@@ -2659,7 +2659,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>May 7</p>
+<li><p>November 5</p>
 <ul>
 <li><strong>Comparing groups: statistical tests</strong>
 <ul>
@@ -2671,7 +2671,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>May 9</p>
+<li><p>November 7</p>
 <ul>
 <li><strong>Comparing groups: statistical tests</strong>
 <ul>
@@ -2683,7 +2683,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>May 10</p>
+<li><p>November 8</p>
 <ul>
 <li><strong>Progress marketing report 2</strong>
 <ul>
@@ -2699,7 +2699,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>May 10</p>
+<li><p>November 8</p>
 <ul>
 <li><strong>Oral presentation marketing report part 2</strong>
 <ul>
@@ -2716,7 +2716,7 @@ Table 1: Reading schedule
 <section id="tercer-corte-40" class="level3" data-number="3.2.3">
 <h3 data-number="3.2.3" class="anchored" data-anchor-id="tercer-corte-40"><span class="header-section-number">3.2.3</span> Tercer corte 40%</h3>
 <ul>
-<li><p>May 14</p>
+<li><p>November 12</p>
 <ul>
 <li><strong>Identifying drivers of outcomes: linear models</strong>
 <ul>
@@ -2728,7 +2728,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>May 16</p>
+<li><p>November 14</p>
 <ul>
 <li><strong>Identifying drivers of outcomes: linear models</strong>
 <ul>
@@ -2740,7 +2740,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>May 17</p>
+<li><p>November 15</p>
 <ul>
 <li><strong>Progress marketing report 3</strong>
 <ul>
@@ -2756,7 +2756,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>May 21</p>
+<li><p>November 19</p>
 <ul>
 <li><strong>Reducing data complexity</strong>
 <ul>
@@ -2768,7 +2768,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>May 23</p>
+<li><p>November 21</p>
 <ul>
 <li><strong>Reducing data complexity</strong>
 <ul>
@@ -2780,7 +2780,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>May 24</p>
+<li><p>November 22</p>
 <ul>
 <li><strong>Progress marketing report 3</strong>
 <ul>
@@ -2796,7 +2796,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>May 28</p>
+<li><p>November 26</p>
 <ul>
 <li><strong>Segmentation: Clustering</strong>
 <ul>
@@ -2808,7 +2808,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>May 30</p>
+<li><p>November 28</p>
 <ul>
 <li><strong>Segmentation: Clustering</strong>
 <ul>
@@ -2820,7 +2820,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>May 31</p>
+<li><p>November 29</p>
 <ul>
 <li><strong>Progress marketing report 3</strong>
 <ul>
@@ -2836,7 +2836,7 @@ Table 1: Reading schedule
 </ul></li>
 </ul></li>
 </ul></li>
-<li><p>May 31</p>
+<li><p>November 29</p>
 <ul>
 <li><strong>Oral presentation marketing report part 3</strong>
 <ul>
