adding emphasis about cleaning the template

--- a/000_templates/001_marketing_report_part-1.html
+++ b/000_templates/001_marketing_report_part-1.html
@@ -2405,7 +2405,7 @@ window.Quarto = {
 
 <section id="describing-data" class="level1" data-number="1">
 <h1 data-number="1"><span class="header-section-number">1</span> Describing data</h1>
-<p>Please clean all the instructions in the different sections including this text and add the necessary text to present the report.</p>
+<p><strong>Please clean all the instructions</strong> in the different sections of the template including this text and add the necessary text to present the report.</p>
 <section id="introduction" class="level2" data-number="1.1">
 <h2 data-number="1.1" class="anchored" data-anchor-id="introduction"><span class="header-section-number">1.1</span> Introduction</h2>
 <p>Once your group has finish filling all the sections, add some text here describing the principal findings. Be straightforward and concise taking into account that it is an executive report.</p>
